Footer moved out from from page policies. Footer overflow is visible, fixed now.

--- a/src/main/webapp/Who-Am-I-comics/css/comics-pages.css
+++ b/src/main/webapp/Who-Am-I-comics/css/comics-pages.css
@@ -286,7 +286,6 @@ img {
     margin-left: 761px;
     background-image: url("../image/footer-bg-02.png");
     opacity: 0.5;
-    overflow: hidden;
     -webkit-transition: 0.5s ease;
     -moz-transition: 0.5s ease;
     -o-transition: 0.5s ease;
